--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Created by https://www.toptal.com/developers/gitignore/api/java,python,laravel
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,python,laravel
 
+.DS_Store
+
 ### Java ###
 # Compiled class file
 *.class
