--- a/Rust/ezytutors/tutor-nodb/Cargo.toml
+++ b/Rust/ezytutors/tutor-nodb/Cargo.toml
@@ -13,3 +13,5 @@ name = "tutor-service"
 [dependencies]
 actix-web = "4.2.1"
 actix-rt = "2.7.0"
+serde = { version = "1.0.110", features = ["derive"] }
+chrono = { version = "0.4.11", features = ["serde"] }
