--- a/CS/bench-test/app/bun/docker-compose.yaml
+++ b/CS/bench-test/app/bun/docker-compose.yaml
@@ -7,10 +7,10 @@ services:
     environment:
       TZ: "Asia/Seoul"
     restart: unless-stopped
-    cpuset: "0-1"
-    cpus: 2
-    mem_limit: 2g
-    mem_reservation: 1g
+    cpuset: "0"
+    cpus: 1
+    mem_limit: 1g
+    mem_reservation: 500m
     ulimits:
       nofile: 1048576
 
