--- a/CS/bench-test/loadgen/wrk/docker-compose.yaml
+++ b/CS/bench-test/loadgen/wrk/docker-compose.yaml
@@ -1,4 +1,4 @@
-# docker compose -f wrk-compose.yml run -T --rm wrk \ -t6 -c400 -d60s --latency http://app:3000/ 2>&1 | tee results/bench.txt
+# docker compose run -T --rm wrk -t6 -c400 -d60s --latency http://app:3000/ 2>&1 | tee results/bench.txt
 
 services:
   wrk:
